--- a/dada/templates/minimal_subscription_form.tmpl
+++ b/dada/templates/minimal_subscription_form.tmpl
@@ -1,6 +1,6 @@
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="flavor" value="s" > 
- <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" > 
- <input type="text" name="email" value="" >
- <input type="submit" value="Subscribe" >
+ <input type="hidden" name="flavor" value="subscribe"> 
+ <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->"> 
+ <input type="text" name="email" value="">
+ <input type="submit" class="button" value="Subscribe">
 </form>
